<resources>
    <string name="app_name">PicView</string>
    <string name="share">share</string>
    <string name="favorites">Favorites</string>
    <string name="delete">delete</string>
    <string name="sidesShow">SidesShow</string>
    <string name="albumsRaw">albumsCover</string>
    <string name="request_permission">Request Permission</string>
    <string name="imageRaw">imageRaw</string>
    <string name="videoRaw">Video</string>
    <string name="play_pause">video play pause</string>
    <string name="settings">Settings</string>
    <string name="About">About</string>
    <string name="Exit">Exit</string>
    <string name="nav_open">Menu Open</string>
    <string name="nav_close">Menu Close</string>
    <string name="number_of_column">Recommend : 3 to 7</string>
    <string name="gridColumnNumber">GridColumn For Photos</string>
    <string name="aboutPicView">Thanks For Using PicView\n\nDeveloped By VP:\n\nSource Code:</string>
    <string name="slideShowTimer">Slideshow Slide Time</string>
    <string name="gridColumnNumberAlbums">Grid Column For Albums</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="shuffle_images">Shuffle Images</string>
</resources>