<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/backGroundColorSettingDialog"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:backgroundTint="@color/backGroundColorSettingDialog"
        android:paddingTop="20dp"
        android:paddingHorizontal="20dp"
        app:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/columnCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/number_of_column"
            android:padding="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/backGroundColorSettingDialog"
            android:layout_marginTop="5dp"
            android:gravity="end">

            <Button
                android:id="@+id/noColumn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/iconColorMenu" />

            <Button
                android:id="@+id/yesColumn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set"
                android:textColor="@color/iconColorMenu" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>